# mc2-opengl-remastered

./: .gitignore  2026-04-10-cpu-terrain-displacement-design.md  2026-04-10-cpu-terrain-displacement-plan.md  BUILD-WIN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_README.md  vcpkg.json
.claude/: settings.local.json
.claude/agents/: amd-shader-reviewer.md
.claude/hooks/: check_game_running.py  shader_deploy.py
.claude/skills/: mc2-build-deploy.md  mc2-build.md  mc2-check.md  mc2-deploy.md  mc2-shader-diff.md
.codex_tmp_isolate/: quad_desired.cpp  quad_desired.patch  quad_head.cpp
Editor/: Action.cpp  CMakeLists.txt  CampaignDialog.cpp  ChooseBuildingDlg.h  DamageBrush.cpp  DragTool.cpp  EDITOR_CHANGELOG.md  EditForestDlg.cpp  Editor.cpp  EditorCamera.h  EditorData.cpp  EditorGameOS.cpp  EditorGosRender.cpp  EditorInterface.cpp  EditorInterface.h  EditorMFC.cpp  EditorObjectCatalog.h  EditorObjectMgr.cpp  EditorObjectMgr.h  EditorObjects.cpp  EditorResourceCatalog.cpp  EditorResourceCatalog.h  EditorResourceFallback.h  EditorVersion.cpp  EditorVersion.h  Editores.cpp  LinkBrush.cpp  MainFrm.cpp  MissionSettingsDlg.cpp  ObjectSelectionBrush.cpp  Objective.cpp  PointerSelectObjectDlg.cpp  PointerSelectObjectDlg.h  ResourceStringSelectionDlg.cpp  StdAfx.h  TACMapTGA.h  TargetAreaDlg.cpp  UnitSettingsDlg.cpp  eraser.cpp  forest.cpp  (+1 more)
GameOS/gameos/: CMakeLists.txt  MC2Strings.cpp  MC2Strings.h  asset_scale.cpp  asset_scale.h  gameos.cpp  gameos_graphics.cpp  gameos_input.cpp  gameos_res.cpp  gameos_sound.cpp  gameosmain.cpp  gos_crashbundle.cpp  gos_crashbundle.h  gos_font.cpp  gos_font.h  gos_input.h  gos_postprocess.cpp  gos_postprocess.h  gos_profiler.h  gos_render.cpp  gos_render.h  gos_smoke.cpp  gos_smoke.h  gos_static_prop_batcher.cpp  gos_static_prop_batcher.h  gos_static_prop_killswitch.h  gos_terrain_bridge.h  gos_terrain_indirect.cpp  gos_terrain_indirect.h  gos_terrain_patch_stream.cpp  gos_terrain_patch_stream.h  gos_terrain_water_stream.cpp  gos_terrain_water_stream.h  gos_validate.cpp  gos_validate.h
GameOS/include/: gameos.hpp
Tracy/: startup4-17-26.tracy  startupSLOW.tracy
Viewer/: View.cpp
cmake/: FindFFmpegLGPL.cmake  mc2video_dlls.h.in
code/: ablmc2.cpp  actor.cpp  artlry.cpp  artlry.h  bldng.cpp  collsn.cpp  contact.cpp  contact.h  controlgui.cpp  forcegroupbar.cpp  gamecam.cpp  gameobj.cpp  gameobj.h  gametacmap.cpp  gate.cpp  gvehicl.cpp  gvehicl.h  loadscreen.h  logistics.cpp  logisticsdata.cpp  logisticsdata.h  logisticsmissioninfo.cpp  logisticsmissioninfo.h  mc2movie.cpp  mc2movie.h  mc2video.cpp  mc2video.h  mech.cpp  mechcmd2.cpp  mechicon.cpp  mechicon.h  mission.cpp  mission.h  mission2.cpp  missionbegin.cpp  missionbriefingscreen.cpp  missiongui.cpp  missionselectionscreen.cpp  movemgr.cpp  mover.cpp  (+15 more)
data/art/: asset_sizes.csv
data/editor/: editor_base_terrain.fit  editor_menus.fit  editor_objects.fit  editor_overlays.fit  editor_strings.fit  editor_terrain.fit
docs/: amd-driver-rules.md  architecture.md  asan-autonomous-run-log.md  asan-follow-ups.md  asan-mvp-runbook.md  asan-triage.md  cement-overlay-codemap.md  game-auto-tools.md  gpu-static-prop-cull-lessons.md  modding-guide.md  render-contract.md  terrain-underlayer-note.md
docs/observations/: 2026-04-24-tier2-visual-observations.md  2026-04-25-abl-library-shadow-rule.md
docs/plans/: 2026-04-10-shadow-quality-design.md  2026-04-10-shadow-quality-plan.md  2026-04-11-gbuffer-postprocess-shadow-design.md  2026-04-11-gbuffer-postprocess-shadow.md  2026-04-11-shadow-debug-visualizer-design.md  2026-04-11-shadow-debug-visualizer-plan.md  2026-04-11-tracy-profiler-design.md  2026-04-11-tracy-profiler-impl.md  (+23 more)
editor/: Action.h  BuildingBrush.cpp  BuildingLink.cpp  BuildingSettingsDlg.cpp  CMakeLists.txt  ChooseBuildingDlg.cpp  ChooseUnitDlg.cpp  ChooseUnitDlg.h  DlgFileOpen.h  EDITOR_CHANGELOG.md  Editor.cpp  EditorData.cpp  EditorGameOS.cpp  EditorGosRender.cpp  EditorInterface.cpp  EditorMFC.cpp  EditorMFC.h  EditorObjectCatalog.cpp  EditorObjects.h  EditorResourceCatalog.cpp  EditorResourceFallback.h  EditorTacMap.cpp  EditorTacMap.h  EditorVersion.cpp  EditorVersion.h  ForestDlg.cpp  LinkBrush.h  MainFrm.cpp  MessageBox.h  MineBrush.cpp  ObjectiveDlg.cpp  ObjectiveDlg.h  OverlayBrush.cpp  SelectTerrainTypeDlg.cpp  SelectionBrush.cpp  SingleValueDlg.cpp  TargetAreaDlg.h  TerrainDlg.cpp  UserTextEdit.cpp  dropZoneBrush.cpp  (+4 more)
gui/: aanimobject.h  abutton.cpp  aedit.cpp  alistbox.cpp  asystem.cpp  asystem.h  logisticsscreen.cpp  logisticsscreen.h
mclib/: CMakeLists.txt  ablexec.cpp  ablsymt.cpp  ablsymt.h  ablxstd.cpp  ablxstmt.cpp  appear.cpp  bdactor.cpp  camera.cpp  camera.h  clouds.cpp  crater.cpp  ffile.cpp  file.cpp  file.h  genactor.cpp  gvactor.cpp  lz.h  lzdecomp.cpp  mapdata.cpp  mapdata.h  mech3d.cpp  move.cpp  move.h  msl.cpp  msl.h  packet.cpp  projectz_overlay.cpp  projectz_overlay.h  projectz_trace.cpp  projectz_trace.h  quad.cpp  quad.h  render_contract.cpp  render_contract.h  soundsys.cpp  soundsys.h  terrain.cpp  terrain.h  terrtxm.cpp  (+14 more)
release_assets/: LICENSE.FFmpeg.txt
scripts/: build_release.sh  check-asset-scale-callers.sh  check-claude-md-pointer.sh  check-destroy-invariant.sh  check-render-contract-gbuffer1.sh  game_auto.py  run_smoke.py  water_visual_diff.py
shaders/: bloom_blur.frag  bloom_threshold.frag  decal.frag  godray.frag  gos_grass.frag  gos_grass.geom  gos_terrain.frag  gos_terrain.tesc  gos_terrain.tese  gos_terrain.vert  gos_terrain_thin.vert  gos_terrain_water_fast.vert  gos_tex_vertex.frag  gos_tex_vertex.vert  gos_tex_vertex_lighted.frag  gos_tex_vertex_lighted.vert  gos_text.frag  gos_vertex.frag  gos_vertex_lighted.frag  overlay_alpha_clear.frag  postprocess.frag  postprocess.vert  shadow_debug.frag  shadow_depth.vert  shadow_object.frag  shadow_object.vert  shadow_screen.frag  shadow_terrain.frag  shadow_terrain.tesc  shadow_terrain.tese  shadow_terrain.vert  shoreline.frag  skybox.frag  skybox.vert  ssao.frag  ssao_apply.frag  ssao_blur.frag  static_prop.frag  static_prop.vert  terrain_overlay.frag  (+1 more)
(+134 files in other folders)
